# readFilePerformance

./: README.md  default.nix  hie.yaml  readFilePerformance.cabal  stack.yaml
app/: Main.hs
