cabal-version:      3.0
name:               readFilePerformance
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Ruben Moor
maintainer:         ruben.moor@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    README.md

executable readFilePerformance
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
          base
        , bytestring >= 0.11.2
        , containers
        , directory
        , strict
        , text
        , unordered-containers
        , vector
        , vector-algorithms
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:
        -Wall
